devscripts (2.14.7) UNRELEASED; urgency=low

  * deb-reversion: update change_version(), fixing the missing call_hook
    statement in the udeb case. That was overlooked when the changelog
    massaging was made conditional, and causes hooks to be ignored for
    udebs.

 -- Cyril Brulebois <kibi@debian.org>  Fri, 08 Aug 2014 01:27:12 +0200

devscripts (2.14.6) unstable; urgency=medium

  [ Benjamin Drung ]
  * suspicious-source: Add image/tiff, application/pgp-keys, and image/x-icon
    to whitelisted mime-types. Add .gmo to whitelisted file extensions.
  * wrap-and-sort: Add --max-line-length option with a default of 79 characters
    (it was previously hard-coded to 80 characters).  (Closes: #756067)

  [ Guillem Jover ]
  * nmudiff: Send control messages inline.  (Closes: #752152)

  [ Paul Wise ]
  * rmadison: bpo madison is dead, remove it
  * rmadison: add new to the defaults for Debian
  * rmadison: document the defaults in the manual page

  [ James McCoy ]
  * namecheck: Remove berlios, since it no longer hosts code.  (Closes:
    #752382)
  * mk-build-deps:
    + Provide the package name, not file name, to “dpkg --remove” when package
      install fails.
    + Read all of the output from “apt-cache showsrc” to ensure mk-build-deps
      doesn't get stuck waiting for apt-cache to exit.
    + Pass the name of the .deb file out of build_equiv to ensure the correct
      .deb is installed.  (Closes: #753657)

  [ Christoph Berg ]
  * Update all qa.debian.org URLs to https://.

  [ Ron Lee ]
  * cowpoke:
    + Allow more flexibility for specialised build chroots.
      It's now possible to specify arbitrary 'dist' names, with arbitrary
      special configurations on top of the real BASE_DIST suite.  This means
      it's easy to have things like a chroot for wheezy-backports which will
      be able to pull other deps from the backports repo, while still having
      a pristine wheezy build chroot on the same build host.  Or to have a